--- a/ex022/fundo006.html
+++ b/ex022/fundo006.html
@@ -8,15 +8,18 @@
     <style>
         body{
             height: 100vh;
-            background-color: skyblue;
+            /*background-color: skyblue;
             background-image: url(imagens/wallpaper002.jpg);
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;*/
+            background-size: cover;
+            background: skyblue url('imagens/wallpaper002.jpg') center center no-repeat fixed;
         }
         main{
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             margin: auto;
             border-radius: 10px;
             border: 1px solid darkblue;
@@ -27,6 +30,10 @@
     <main>
         <h1>Teste de imagem de fundo</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt cumque suscipit natus! Qui culpa autem consequatur placeat dignissimos laboriosam adipisci quisquam dicta, deleniti perferendis suscipit repellendus, eaque, at necessitatibus ab? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, doloribus ad similique at iure eligendi hic iste dolorem esse veniam, autem sapiente. Quas minus asperiores mollitia soluta, repellendus corrupti totam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, veritatis aliquid. Quod eaque voluptas accusamus ducimus nihil voluptatem consequatur alias tempora ab quae praesentium corporis placeat sed, dignissimos expedita obcaecati. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo sed quibusdam temporibus. Ullam omnis quibusdam qui officia vitae libero, reiciendis ratione velit earum distinctio eaque dolorum! Adipisci voluptatibus repellendus iure?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt cumque suscipit natus! Qui culpa autem consequatur placeat dignissimos laboriosam adipisci quisquam dicta, deleniti perferendis suscipit repellendus, eaque, at necessitatibus ab? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, doloribus ad similique at iure eligendi hic iste dolorem esse veniam, autem sapiente. Quas minus asperiores mollitia soluta, repellendus corrupti totam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, veritatis aliquid. Quod eaque voluptas accusamus ducimus nihil voluptatem consequatur alias tempora ab quae praesentium corporis placeat sed, dignissimos expedita obcaecati. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo sed quibusdam temporibus. Ullam omnis quibusdam qui officia vitae libero, reiciendis ratione velit earum distinctio eaque dolorum! Adipisci voluptatibus repellendus iure?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt cumque suscipit natus! Qui culpa autem consequatur placeat dignissimos laboriosam adipisci quisquam dicta, deleniti perferendis suscipit repellendus, eaque, at necessitatibus ab? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, doloribus ad similique at iure eligendi hic iste dolorem esse veniam, autem sapiente. Quas minus asperiores mollitia soluta, repellendus corrupti totam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, veritatis aliquid. Quod eaque voluptas accusamus ducimus nihil voluptatem consequatur alias tempora ab quae praesentium corporis placeat sed, dignissimos expedita obcaecati. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo sed quibusdam temporibus. Ullam omnis quibusdam qui officia vitae libero, reiciendis ratione velit earum distinctio eaque dolorum! Adipisci voluptatibus repellendus iure?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt cumque suscipit natus! Qui culpa autem consequatur placeat dignissimos laboriosam adipisci quisquam dicta, deleniti perferendis suscipit repellendus, eaque, at necessitatibus ab? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, doloribus ad similique at iure eligendi hic iste dolorem esse veniam, autem sapiente. Quas minus asperiores mollitia soluta, repellendus corrupti totam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, veritatis aliquid. Quod eaque voluptas accusamus ducimus nihil voluptatem consequatur alias tempora ab quae praesentium corporis placeat sed, dignissimos expedita obcaecati. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo sed quibusdam temporibus. Ullam omnis quibusdam qui officia vitae libero, reiciendis ratione velit earum distinctio eaque dolorum! Adipisci voluptatibus repellendus iure?</p>
+
     </main>
 </body>
 </html>
