--- a/desafios/desafio012/cordel.html
+++ b/desafios/desafio012/cordel.html
@@ -12,9 +12,9 @@
             <h1>
                 Cordel Moderno
             </h1>
-        <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743">Milton Duarte</a></p>
+        <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Milton Duarte</a></p>
     </header>
-    <section class="normal">
+    <section class="normal" id="primeiro">
         <p>
             Estou ficando cansado
             <br>
@@ -131,7 +131,7 @@
     </section>
     <footer>
         <p>
-            Site criado por JhonatanSantos para o cursoemvideo 
+            Site criado por <a href="https://github.com/JhonatanSantos085" target="_blank">JhonatanSantos</a> para o cursoemvideo 
         </p>
     </footer>
 </body>
