--- a/desafios/desafio012/cordel.html
+++ b/desafios/desafio012/cordel.html
@@ -31,7 +31,7 @@
             Vou dizer tudo em poesia.
         </p>
     </section>
-    <section class="imagen" id="img01">
+    <section class="imagem" id="img01">
         <p>
             Não é mais como era antes
             <br>
@@ -80,7 +80,7 @@
             Decifre esse rabisco.
         </p>
     </section>
-    <section class="imagen" id="img02">
+    <section class="imagem" id="img02">
         <p>
             Tenho saudade das cartas
             <br>
