--- a/desafios/correção-d12/index.html
+++ b/desafios/correção-d12/index.html
@@ -27,7 +27,7 @@
         </p>
     </section>
 
-    <section class="imagem">
+    <section class="imagem" id="img01">
         <p>
             Não é mais como era antes <br>
             É tudo abreviado <br>
@@ -35,8 +35,9 @@
             O "O" e o "E" foi riscado <br>
             Para declarar o amor <br>
             Basta botar uma flor <br>
+            E um coração desenhado.
         </p>
-        E um coração desenhado.
+        
     </section>
 
     <section class="normal">
@@ -62,7 +63,7 @@
     </section>
 
 
-    <section class="imagem">
+    <section class="imagem" id="img02">
         <p>
             Tenho saudade das cartas <br>
             Escritas com a própria mão <br>
