--- a/ex025/form001.html
+++ b/ex025/form001.html
@@ -12,12 +12,19 @@
     </style>
 </head>
 <body>
-    <h1>Meu Primeiro Formulário</h1>
+    <h1>Meu primeiro formulário</h1>
     <form action="cadastro.php" method="post" autocomplete="off">
-        <p><label for="inome">Nome:</label><input type="text" name="nome" id="inome"></p>
-        <label for="isobrenome"><p>Sobrenome:</label> 
-            <input type="text" name="sobrenome" id="isobrenome"></p>
-        <p><input type="submit" value="Enviar"></p>
+        <p>
+            <label for="inome">Nome: </label>
+            <input type="text" name="nome" id="inome">
+        </p>
+        <p>
+            <label for="isobrenome">Sobrenome: </label>
+            <input type="text" name="sobrenome" id="isobrenome">
+        </p>
+        <p>
+            <input type="submit" value="Enviar">
+        </p>
     </form>
 </body>
 </html>
